--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BJ'
 - !lcsh 'Etiquette'
+- GITenberg
 title: Manners and Conduct in School and Out
 url: http://www.gutenberg.org/ebooks/14408
